# Enterprise-Brokerage-Calculation-Management-System

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apex/: README.md  chart_queries.sql  install_supporting_objects.sql  lov_queries.sql  page_blueprint.md  preview.html  reporting_views.sql  security_authorization.sql
dags/: brokerage_daily_dag.py
docs/: api_examples.http  architecture.md
etl/pyspark/: batch_brokerage_job.py
migrations/: README.md  env.py
migrations/versions/: 0001_initial_schema.py
scripts/: check.py  migrate_db.py  seed_demo.py
sql/: oracle_schema.sql  plsql_brokerage_pkg.sql
src/ebcms/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
src/ebcms/api/: dependencies.py
src/ebcms/api/routes/: auth.py  clients.py  operations.py  reports.py  rules.py  trades.py
src/ebcms/core/: enums.py
src/ebcms/services/: __init__.py  auth.py  brokerage_engine.py  calculation.py  trade_import.py  validation.py
tests/: test_apex_assets.py  test_api_smoke.py  test_brokerage_engine.py  test_migrations.py  test_validation.py
